refactor: resDto 수정 (#237)